k8s/monitoring/13-monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: monitoring
  namespace: monitoring

spec:
  ingressClassName: traefik

  rules:
    - host: grafana.platform.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana
                port:
                  number: 80

    - host: prometheus.platform.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-kube-prometheus-prometheus
                port:
                  number: 9090

    - host: alertmanager.platform.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-kube-prometheus-alertmanager
                port:
                  number: 9093
